--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "core-js": "^3.8.3",
     "highlight.js": "^11.10.0",
     "highlightjs-line-numbers.js": "^2.8.0",
-    "marked": "^13.0.2",
+    "markdown-it": "^14.1.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.77.8",
     "sass-loader": "^15.0.0",
